--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.19.2",
     "node-pg-migrate": "^7.6.1",
     "pg": "^8.12.0"
   }
